--- a/CSS/style.css
+++ b/CSS/style.css
@@ -305,10 +305,12 @@
         color: white;
     }
     /*PAGE tour*/
-    
+    /* ở đây cần chỉnh lại*/
     .tour_page .content {
         padding-top: 50px;
     }
+    
+
     /*PAGE book now*/
     
     .book_page .page__banner {
@@ -370,15 +372,30 @@
         margin-top: var(--space);
     }
     /*PAGE about us*/
+    .aboutus_page .page__content {
+        padding-top: 100px;
+        width: 100%;
+        height: 990px;
+        z-index: 1;
+        margin-bottom: var(--space);
+    }
+    .aboutus_page .page__content--content{
+        background-color: var(--infColor);
+        width: 100%;
+        height: 990px;
+    }
     /*PAGE review*/
     .p1--review {
         padding-top: 100px;
     }
     
-    .review_page .page__content--slide img{
+    .review_page .page__content--slide{
         width: 900px;
         height: 420px;
-        
+    }
+    .review_page .page__content--slide img{
+        width: 100%;
+        height: auto;
     }
     
     .review_page .content__best{
@@ -411,11 +428,16 @@
         margin-left: 20px;
         margin-top: 20px;
     }
-    .page__content--review iframe{
-        margin-left: var(--space);
+
+    .page__content--review{
         width: 760px;
-        height: 680px;
+        margin-left: var(--space);
         background-color: var(--infColor);
+        height: 680px;
+    }
+    .page__content--review iframe{
+        height: 680px;
+        width: 100%;
     }
     /*PAGE detail*/
     
@@ -426,6 +448,9 @@
         margin-bottom: var(--space);
     }
     
+    .detail_page .page__banner img{
+        width: 100%;
+    }
     .part--right {
         margin-left: var(--space);
         width: 400px;
@@ -437,14 +462,15 @@
     
     .page__content--video img{
         height: 600px;
-        width: 800px;
+        width: 100%;
     }
 
     .page__content--book{
         border: 1px solid rgb(50, 99, 235);
         width: 397px;
-        height: 600px;
+        height: auto;
         background-color: var(--infColor);
+        
     }
 
     .content__book--price{
@@ -460,7 +486,7 @@
 
     .detail_page input, .detail_page textarea{
         margin-left: 20px;
-        margin-bottom: var(--space);
+        margin-bottom: 20px;
         border: 1px solid black;
         border-radius: 20px;
         padding-left: 10px;
@@ -488,6 +514,7 @@
         color: white;
         margin: 0 auto;
         border-radius: 20px;
+        margin-bottom: var(--space);
     }
 
     .page__content--discription {
@@ -522,7 +549,7 @@
     }
     
     .page__content--map img {
-        width: 800px;
+        width: 100%;
         height: 500px;
     }
     
@@ -537,26 +564,119 @@
     .security_page .page__content {
         padding-top: 100px;
         width: 100%;
-        height: 990px;
+        height: auto;
         z-index: 1;
     }
     .security_page .page__content--content{
         background-color: var(--infColor);
         width: 100%;
         height: 990px;
+        margin-bottom: var(--space);
     }
     
     /*PAGE provision*/
     .provision_page .page__content {
         padding-top: 100px;
         width: 100%;
-        height: 990px;
+        height: auto;
         z-index: 1;
     }
     .provision_page .page__content--content{
         background-color: var(--infColor);
         width: 100%;
         height: 990px;
+        margin-bottom: var(--space);
+    }
+    /*PAGE register and signin*/
+    .register_page .page__content{
+        padding-top: 100px;
+        z-index: 1;
+    }
+    h3{
+        text-align: center;
+    }
+    .form__option{
+        width:40%;
+        margin: 0 auto;
+        margin-bottom: var(--space);
+        border: 1px solid black;
+        height: auto;
+    }
+    .form__option ul{
+        list-style: none;
+        display: flex;
+        flex-wrap: wrap;
+        text-transform: uppercase;
+    }
+    .form__option li{
+        width: 200px;
+        margin-left: 30%;
+    }
+    form{
+        margin-top: -20px;
+    }
+    .form_row{
+        margin-bottom: 20px;
+    }
+    .form__label{
+        display: flex;
+        flex-direction: column;
+    }
+    label, input{
+        margin-left: 5%;
+    }
+    .form__option input{
+        height: 30px;
+        margin-top: 5px;
+        width: 80%;
+        padding-left: 5px;
+    }
+    input.accept{
+        padding-right: 5px;
+        height: 20px;
+        width: 20px;
+    }
+    input.form__button {
+        width: 100px;
+        margin-left: 40%;
+        background-color: var(--menuColor);
+        color: white;
+        border-radius: 20px;
+    }
+    .register_page p{
+        text-align: center;
+        font-size: medium;
+    }
+    .link__other{
+        display: flex;
+        flex-wrap: wrap;
+        margin-left: 20%;
+        margin-bottom: var(--space);
+    }
+    .GG__link, .FB__link{
+        width: 30%;
+    }
+    .FB__link{
+        margin-left: 15%;
+    }
+    .link__other p{
+        margin-top: -40px;
+        margin-left: 50px;
+    }
+    .link__other a, .form__option a{
+        text-decoration: none;
+    }
+
+    /*signin_page*/
+    .other{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .other div:last-child{
+        margin-left: 20%;
+    }
+    .other a{
+        text-decoration: none;
     }
     /*chiều rộng nhỏ hơn hoặc bằng 480px thì*/
     /*chiều rộng nhỏ hơn hoặc bằng 1000px thì*/
@@ -574,21 +694,28 @@
         .page__content--section {
             margin-bottom: var(--space);
         }
+        
+        .page__content--photo {
+            margin-bottom: var(--space);
+        }
+        /*review_page*/
         .page__content--slide {
             margin-bottom: var(--space);
         }
         .page__content--image {
             margin-bottom: var(--space);
         }
-        .page__content--photo {
-            margin-bottom: var(--space);
-        }
+        /*detail_page*/
         .page__banner,
         .page__content--video,
         .page__content--discription,
         .page__content--map,
         .tour--item {
             margin-bottom: var(--space);
+        }
+        /*signin_page*/
+        .other div:last-child{
+            margin-left: 0px;
         }
     }
     /*Ipad dọc(768 x 1024)*/
@@ -612,21 +739,35 @@
         .page__content--section {
             margin-bottom: var(--space);
         }
+        .page__content--photo {
+            margin-bottom: var(--space);
+        }
+        /*review_page*/
         .page__content--slide {
             margin-bottom: var(--space);
         }
         .page__content--image {
             margin-bottom: var(--space);
         }
-        .page__content--photo {
-            margin-bottom: var(--space);
-        }
+        /*detail_page*/
         .page__banner,
         .page__content--video,
         .page__content--discription,
         .page__content--map,
         .tour--item {
             margin-bottom: var(--space);
+        }
+        /*register_page*/
+        .FB__link, .GG__link{
+            width: 70%;
+            margin-bottom: var(--space);
+        }
+        .FB__link{
+            margin-left: 0px;
+        }
+        /*signin_page*/
+        .other div:last-child{
+            margin-left: 0px;
         }
     }
     /*Điện thoại bản nhỏ 320px*/
@@ -648,15 +789,17 @@
         .page__content--section {
             margin-bottom: var(--space);
         }
+        .page__content--photo {
+            margin-bottom: var(--space);
+        }
+        /*review_page*/
         .page__content--slide {
             margin-bottom: var(--space);
         }
         .page__content--image {
             margin-bottom: var(--space);
         }
-        .page__content--photo {
-            margin-bottom: var(--space);
-        }
+        /*detail_page*/
         .page__banner,
         .page__content--video,
         .page__content--discription,
