--- a/CSS/style.css
+++ b/CSS/style.css
@@ -604,6 +604,48 @@
         height: 990px;
         margin-bottom: var(--space);
     }
+    /* Page Send review */
+
+.page_content_slide_img img{
+    width: 100%;
+    height: 20%;
+    
+}
+.page__content--cusreview{
+    width: 100%;
+    /* height: 300px; */
+    justify-content: space-between;
+    margin-top: var(--space);
+    margin-bottom: var(--space);
+
+}
+
+.page__content--cusreview-left {
+    width: 30%;
+    text-align: center;
+   
+    
+}
+.page__content--cusreview-left img {
+    width: 100%;
+    
+    margin-bottom: var(--space);
+}
+
+.page__content--cusreview-right {
+    width: 70%;
+    text-align: center;
+
+}
+#cusreview_text{
+    height: 240px;
+    width: 90%;
+    margin-left: 0;
+    padding-left: var(--space);
+    padding-right: 0;
+    margin-bottom: var(--space);
+}
+
     /*PAGE register and signin*/
     
     .register_page .page__content {
