--- a/CSS/style.css
+++ b/CSS/style.css
@@ -393,6 +393,16 @@
         width: 100%;
         height: 990px;
     }
+    .aboutus_page .page__content--content h1{
+        text-align: center;
+    }
+    .aboutus_page .page__content--content h2,p{
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+    .aboutus_page .page__content--content ul{
+        padding-left: 100px;
+    }
     /*PAGE review*/
     
     .p1--review {
@@ -589,6 +599,19 @@
         height: 990px;
         margin-bottom: var(--space);
     }
+    .security_page .page__content--content{
+        padding-left: 10px;
+    }
+    .security_page .page__content--contentspan{
+        font-weight: bold;
+        font-size: 15px;
+    }
+    .security_page .page__content--content p{
+        font-size: 14px;
+    }
+    .security_page .page__content--content p:first-child{
+        padding-top: 5px;
+    }
     /*PAGE provision*/
     
     .provision_page .page__content {
@@ -603,6 +626,13 @@
         width: 100%;
         height: 990px;
         margin-bottom: var(--space);
+    }
+    .provision_page .page__content--content{
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+    .provision_page .page__content--content ul{
+        padding-left: 50px;
     }
     /* Page Send review */
 
