--- a/CSS/style.css
+++ b/CSS/style.css
@@ -229,7 +229,38 @@
     
     .page--slide {
         padding-top: 50px;
-        background-color: cadetblue;
+    }
+    
+    .absolute {
+        position: relative;
+        margin: auto 0;
+    }
+    
+    .absolute .btn-search {
+        position: absolute;
+        margin-top: 50px;
+    }
+    
+    .input-search {
+        border-radius: 15px;
+        border-left: 1px solid white;
+        border-top: 1px solid white;
+        border-bottom: 1px solid white;
+        width: 200px;
+        height: 26px;
+        padding-left: 10px;
+        background-color: inherit;
+        margin: auto 0;
+    }
+    
+    .fa-search {
+        margin-left: 10px;
+        margin: auto 0;
+        color: rgb(255, 255, 255);
+    }
+    
+    .fa-search:hover {
+        cursor: pointer;
     }
     
     .page--slide img {
@@ -244,11 +275,16 @@
     }
     
     .tour--item {
-        height: 600px;
         width: 380px;
+        height: 600px;
         min-width: 300px;
         border: 2px solid steelblue;
         margin-bottom: var(--space);
+    }
+    
+    .tour--item .btn {
+        margin-bottom: var(--space);
+        margin-top: var(--space);
     }
     
     .tour--item img {
@@ -281,13 +317,14 @@
         background-color: tomato;
         position: relative;
         z-index: 1;
-    }.page__transition img{
+    }
+    
+    .page__transition img {
         width: 100%;
         height: 100%;
     }
     
     .home_page .page__content--review {
-        
         width: 100%;
         background-color: violet;
         margin-left: 0px;
@@ -396,18 +433,22 @@
         width: 100%;
         height: 990px;
     }
-    .aboutus_page .page__content--content h1{
+    
+    .aboutus_page .page__content--content h1 {
         text-align: center;
     }
-    .aboutus_page .page__content--content> p{
+    
+    .aboutus_page .page__content--content>p {
         padding-left: 30px;
         padding-right: 30px;
     }
-    .aboutus_page .page__content--content> h2{
+    
+    .aboutus_page .page__content--content>h2 {
         padding-left: 30px;
         padding-right: 30px;
     }
-    .aboutus_page .page__content--content ul{
+    
+    .aboutus_page .page__content--content ul {
         padding-left: 100px;
     }
     /*PAGE review*/
@@ -606,17 +647,21 @@
         /* height: 990px; */
         margin-bottom: var(--space);
     }
-    .security_page .page__content--content{
+    
+    .security_page .page__content--content {
         padding-left: 10px;
     }
-    .security_page .page__content--contentspan{
+    
+    .security_page .page__content--contentspan {
         font-weight: bold;
         font-size: 15px;
     }
-    .security_page .page__content--content p{
+    
+    .security_page .page__content--content p {
         font-size: 14px;
     }
-    .security_page .page__content--content p:first-child{
+    
+    .security_page .page__content--content p:first-child {
         padding-top: 5px;
     }
     /*PAGE provision*/
@@ -634,55 +679,53 @@
         height: 990px;
         margin-bottom: var(--space);
     }
-    .provision_page .page__content--content{
+    
+    .provision_page .page__content--content {
         padding-left: 50px;
         padding-right: 50px;
     }
-    .provision_page .page__content--content ul{
+    
+    .provision_page .page__content--content ul {
         padding-left: 50px;
     }
     /* Page Send review */
-
-.page_content_slide_img img{
-    width: 100%;
-    height: 20%;
     
-}
-.page__content--cusreview{
-    width: 100%;
-    /* height: 300px; */
-    justify-content: space-between;
-    margin-top: var(--space);
-    margin-bottom: var(--space);
-
-}
-
-.page__content--cusreview-left {
-    width: 30%;
-    text-align: center;
-   
+    .page_content_slide_img img {
+        width: 100%;
+        height: 20%;
+    }
     
-}
-.page__content--cusreview-left img {
-    width: 100%;
+    .page__content--cusreview {
+        width: 100%;
+        /* height: 300px; */
+        justify-content: space-between;
+        margin-top: var(--space);
+        margin-bottom: var(--space);
+    }
     
-    margin-bottom: var(--space);
-}
-
-.page__content--cusreview-right {
-    width: 70%;
-    text-align: center;
-
-}
-#cusreview_text{
-    height: 240px;
-    width: 90%;
-    margin-left: 0;
-    padding-left: var(--space);
-    padding-right: 0;
-    margin-bottom: var(--space);
-}
-
+    .page__content--cusreview-left {
+        width: 30%;
+        text-align: center;
+    }
+    
+    .page__content--cusreview-left img {
+        width: 100%;
+        margin-bottom: var(--space);
+    }
+    
+    .page__content--cusreview-right {
+        width: 70%;
+        text-align: center;
+    }
+    
+    #cusreview_text {
+        height: 240px;
+        width: 90%;
+        margin-left: 0;
+        padding-left: var(--space);
+        padding-right: 0;
+        margin-bottom: var(--space);
+    }
     /*PAGE register and signin*/
     
     .register_page .page__content {
