--- a/CSS/style.css
+++ b/CSS/style.css
@@ -102,66 +102,215 @@
       .tour_page .content {
           padding-top: 50px;
       }
-      /*PAGE book now*/
-      
-      .book_page .page__banner {
-          padding-top: 50px;
-          width: 100%;
-          height: auto;
-          margin-bottom: var(--space);
-      }
-      
-      .book_page .page__banner img {
-          width: 100%;
-          /* height: 310px; */
-      }
-      
-      .page__content--information {
-          display: flex;
-          flex-wrap: wrap;
-          justify-content: space-around;
-          margin-bottom: var(--space);
-      }
-      
-      .book_page .information--left {
-          background-color: rgb(238, 247, 248);
-          min-width: 400px;
-          flex: 1;
-          padding-top: var(--space);
-          padding-bottom: var(--space);
-          border: 2px dashed var(--mainColor);
-      }
-      
-      .book_page .flex {
-          display: flex;
-          margin-bottom: 5px;
-      }
-      
-      .book_page .information--right {
-          min-width: 400px;
-          flex: 1;
-          border: 2px dashed var(--mainColor);
-      }
-      
-      .book_page .page__content--book {
-          margin: 0 auto;
-          width: 400px;
-          background-color: wheat;
-          padding-bottom: var(--space);
-          margin-bottom: var(--space);
-      }
-      
-      .flex-sum {
-          margin-left: 20%;
-      }
-      
-      .flex-sum label {
-          width: 150px;
-      }
-      
-      .page__content--book .btn {
-          margin-top: var(--space);
-      }
+     /*PAGE book now*/
+    .book_page {
+        margin: 0;
+        padding: 0;
+    }
+    .page__select{
+        padding-top: var(--space);
+        flex-wrap: wrap;
+        border-radius: 20px;
+        color: white;
+        background-color: #144496;
+        position: absolute;
+        z-index: 2;
+        height: 300px;  
+        min-width: 500px;
+        left: var(--space250);
+        right: var(--space250);
+        top: var(--space200);
+        
+    }
+    .img_slidego img{
+        
+        width: 100%;
+        height: 100%;
+        position: relative;
+        z-index: 1;
+    }
+    .page__select label {
+        font-size: large;
+        padding-right: var(--space);
+    }
+     .page__select__search__place  {
+        padding-left:var(--space150);
+        padding-bottom: var(--space);
+    }
+    .page__select__search__place input {
+        position: relative;
+        font-size: 20px;
+        box-sizing: border-box;
+        transition: .5s;
+
+    }
+    .page__select__search__date{
+        padding-left:var(--space90);
+        padding-bottom: var(--space);
+    }
+    .page__select__search__price {
+        padding-left:var(--space90);
+        padding-bottom: var(--space);
+    }
+    
+   .page__select h5{
+       font-size: x-large;
+       text-align: center;
+       padding-bottom: var(--space);
+   }
+    #search_place {
+       min-width: 150px;
+       height: 50px;
+       outline-style: none;
+       border:none;
+       padding: 0 25px;
+       border-radius: 25px 0 0 25px;
+       
+   }
+   #sub_search_place {
+       border-radius: 0 25px 25px 0;
+       min-width: 150px;
+       height: 50px;
+       outline-style: none;
+       border:none;
+       padding-left: 0%;
+       margin-left: 0%;
+       background: linear-gradient(0, #b25fc7, #f7c65d);
+       color: white;
+   }
+  
+   #book_datefrom {
+    min-width: 170px;
+    height: 50px;
+    outline-style: none;
+    border:none;
+    padding: 0 25px;
+    border-radius: 25px 0 0 25px;
+    padding-left: 0%;
+    margin-left: 0%;
+   }
+   #book_dateto {
+    min-width: 170px;
+    height: 50px;
+    outline-style: none;
+    border:none;
+    padding: 0 25px;
+    border-radius: 0 25px 25px 0;
+    padding-left: 0%;
+    margin-left: 0%;
+   }
+   #pricefrom {
+    min-width: 170px;
+    height: 50px;
+    outline-style: none;
+    border:none;
+    padding: 0 25px;
+    border-radius: 25px 0 0 25px;
+    padding-left: 0%;
+    margin-left: 0%;
+   }
+   #priceto {
+    min-width: 170px;
+    height: 50px;
+    outline-style: none;
+    border:none;
+    padding: 0 25px;
+    border-radius: 0 25px 25px 0;
+    padding-left: 0%;
+    margin-left: 0%;
+   }
+
+    .page__content--information {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        margin-bottom: var(--space);
+    }
+    .information--right img {
+        width: 100%;
+    }
+    .book_page .information--left {
+        background-color: rgb(238, 247, 248);
+        min-width: 300px;
+        flex: 1;
+        padding-top: var(--space);
+        padding-bottom: var(--space);
+        border: 2px dashed var(--mainColor);
+        
+       
+    }
+    .page__content{
+        padding-top: var(--space250);
+
+    }
+    .information--left .flex_row{
+        padding : 8px 5px;
+        display: flex;
+        text-align: left;
+       
+    }
+    .information--left .flex-label{
+        display: inline-block;
+        width: 500px;
+
+    }
+    .information--left .flex-input{
+        width: 300%;
+        outline-style: none;
+        border:none;
+        
+    }
+    .information--left #note {
+        height: 100px;
+    }
+
+    .book_page .information--right {
+        min-width: 300px;
+        flex: 1;
+        border: 2px dashed var(--mainColor);
+    }
+    
+    .book_page .page__content--book {
+        margin: 0 auto;
+        min-width: 300px;
+        background-color: #44a1cf;;
+        padding-bottom: var(--space);
+        margin-bottom: var(--space);
+        color: white;
+        border-radius: 20px;
+    }
+    .page__content--book .flex_row{
+        padding : 8px 5px;
+        display: flex;
+        text-align: left;
+       
+    }
+    .page__content--book .flex_row label {
+        display: inline-block;
+        width: 200px;
+    }
+    .page__content--book .flex-input{
+        width: 200px;
+        outline-style: none;
+        border:none;
+    }
+    #number_book {
+        width: 40px;
+        padding-right: 10px;
+        text-align: center;
+    }
+    #place_book {
+        width: 140px ;
+        padding-right: 10px;
+        text-align: right;
+
+    }
+    .page__content--book .btn {
+        margin-top: var(--space);
+    }
+
+
+    
       /*PAGE about us*/
       
       .aboutus_page .page__content {
